--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-	"name": "slidev-theme-prussianblue",
-	"version": "0.0.7",
-	"keywords": [
-		"slidev-theme",
-		"slidev"
-	],
-	"scripts": {
-		"build": "slidev build example.md",
-		"dev": "slidev example.md --open",
-		"export": "slidev export example.md",
-		"screenshot": "slidev export example.md --format png"
-	},
-	"dependencies": {
-		"@slidev/types": "^0.28.2",
-		"codemirror-theme-vars": "^0.1.1",
-		"prism-theme-vars": "^0.2.2",
-		"theme-vitesse": "^0.1.14"
-	},
-	"devDependencies": {
-		"@slidev/cli": "^0.28.2",
-		"playwright-chromium": "^1.29.2"
-	},
-	"engines": {
-		"node": ">=14.0.0",
-		"slidev": ">=0.19.3"
-	},
-	"//": "Learn more: https://sli.dev/themes/write-a-theme.html",
-	"slidev": {
-		"colorSchema": "light",
-		"highlighter": "all",
-		"defaults": {
-			"fonts": {
-				"sans": "Nunito Sans",
-				"mono": "Fira Code"
-			},
-			"hightlighter": "prism"
-		}
-	}
+  "name": "slidev-theme-prussianblue",
+  "version": "0.0.7",
+  "keywords": [
+    "slidev-theme",
+    "slidev"
+  ],
+  "scripts": {
+    "build": "slidev build example.md",
+    "dev": "slidev example.md --open",
+    "export": "slidev export example.md",
+    "screenshot": "slidev export example.md --format png"
+  },
+  "dependencies": {
+    "@slidev/cli": "^0.40.14",
+    "@slidev/theme-default": "*",
+    "@slidev/theme-seriph": "*",
+    "@slidev/types": "^0.40.14",
+    "codemirror-theme-vars": "^0.1.2",
+    "playwright-chromium": "^1.32.3",
+    "prism-theme-vars": "^0.2.4",
+    "theme-vitesse": "^0.6.4"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "slidev": ">=0.19.3"
+  },
+  "//": "Learn more: https://sli.dev/themes/write-a-theme.html",
+  "slidev": {
+    "colorSchema": "light",
+    "highlighter": "all",
+    "defaults": {
+      "fonts": {
+        "sans": "Nunito Sans",
+        "mono": "Fira Code"
+      },
+      "hightlighter": "prism"
+    }
+  },
+  "description": "[![NPM version](https://img.shields.io/npm/v/slidev-theme-prussianblue?color=3AB9D4&label=)](https://www.npmjs.com/package/slidev-theme-prussianblue)",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
